# screensavers-disco

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  build_helpers.rs
.github/workflows/: ci.yml
assets/: local76-disco.desktop  local76-disco.xml  scene-disco.desktop  scene-disco.xml
scripts/: build.sh  release.sh
src/: disco.rs  main.rs  screensaver_shim.rs  tests_perf.rs
src/disco/: disco_tests.rs  effect.rs  mod.rs  physics.rs  render_ball_eq_logo.rs  render_stars.rs  types.rs
src/runner/core/: mod.rs
