[package]
name = "disco"
version = "2026.7.0"
edition = "2021"
description = "disco - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "disco"
path = "src/main.rs"

[dependencies]
library = { git = "https://github.com/local76/library.git", branch = "main" }

[build-dependencies]
library = { git = "https://github.com/local76/library.git", branch = "main" }
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
name = "scene-disco"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (disco) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/disco", "usr/libexec/screensaver-shims/disco", "755"],
    ["assets/scene-disco.desktop", "usr/share/applications/scene-disco.desktop", "644"],
    ["assets/scene-disco.xml", "usr/share/xscreensaver/config/scene-disco.xml", "644"]
]

[package.metadata.generate-rpm]
name = "scene-disco"
version = "2026.7.0"
release = "1"
arch = "x86_64"
summary = "disco - retro terminal screensaver effect"
description = "Screensaver effect (disco) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/disco", dest = "/usr/libexec/screensaver-shims/disco", mode = "755" },
    { source = "assets/scene-disco.desktop", dest = "/usr/share/applications/scene-disco.desktop", mode = "644" },
    { source = "assets/scene-disco.xml", dest = "/usr/share/xscreensaver/config/scene-disco.xml", mode = "644" }
]
[patch."https://github.com/local76/library.git"]
library = { path = "../library" }
