[package]
name = "disco"
version = "2026.6.10-1"
edition = "2021"
description = "disco - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "disco"
path = "src/main.rs"

[dependencies]
library = { git = "https://github.com/local76/library.git", tag = "v2026.6.10-1", features = ["screensaver-runtime"] }

[build-dependencies]
library = { git = "https://github.com/local76/library.git", tag = "v2026.6.10-1", features = ["screensaver-runtime"] }
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
name = "scene-disco"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (disco) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/disco", "usr/libexec/local76/screensavers/disco", "755"],
    ["assets/local76-disco.desktop", "usr/share/applications/local76-disco.desktop", "644"],
    ["assets/local76-disco.xml", "usr/share/xscreensaver/config/local76-disco.xml", "644"],
    ["assets/local76-disco.png", "usr/share/pixmaps/local76-disco.png", "644"]
]

[package.metadata.generate-rpm]
name = "scene-disco"
version = "2026.6.10-1"
release = "1"
arch = "x86_64"
summary = "disco - retro terminal screensaver effect"
description = "Screensaver effect (disco) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/disco", dest = "/usr/libexec/local76/screensavers/disco", mode = "755" },
    { source = "assets/local76-disco.desktop", dest = "/usr/share/applications/local76-disco.desktop", mode = "644" },
    { source = "assets/local76-disco.xml", dest = "/usr/share/xscreensaver/config/local76-disco.xml", mode = "644" },
    { source = "assets/local76-disco.png", dest = "/usr/share/pixmaps/local76-disco.png", mode = "644" }
]
[patch."https://github.com/local76/library.git"]
library = { path = "../library" }
