[package]
license = "MIT"
name = "disco"
version = "2026.6.10-1"
edition = "2021"
description = "disco - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "disco"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media",
] }

[build-dependencies]
embed-resource = "2"
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo

[package.metadata.deb]
name = "screensaver-disco"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (disco) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/disco", "usr/libexec/local76/screensavers/disco", "755"],
    ["assets/local76-disco.desktop", "usr/share/applications/local76-disco.desktop", "644"],
    ["assets/local76-disco.xml", "usr/share/xscreensaver/config/local76-disco.xml", "644"],
    ["assets/local76-disco.png", "usr/share/pixmaps/local76-disco.png", "644"]
]

[package.metadata.generate-rpm]
name = "screensaver-disco"
version = "2026.6.10.1"
release = "1"
arch = "x86_64"
summary = "disco - retro terminal screensaver effect"
description = "Screensaver effect (disco) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/disco", dest = "/usr/libexec/local76/screensavers/disco", mode = "755" },
    { source = "assets/local76-disco.desktop", dest = "/usr/share/applications/local76-disco.desktop", mode = "644" },
    { source = "assets/local76-disco.xml", dest = "/usr/share/xscreensaver/config/local76-disco.xml", mode = "644" },
    { source = "assets/local76-disco.png", dest = "/usr/share/pixmaps/local76-disco.png", mode = "644" }
]
